--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-<h1><marquee>TheoryFreak Is Alive!</marquee></h1>
-<center>Welcome!</center>
-<center>I created this website to host some of my free software. I hope you enjoy!<center>
+<center><h1>Welcome, Hackers!</h1><center>
