--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<center><h1>Welcome, Hackers!</h1><center>
-  <br></br>
+<center><h1><p>Welcome, Hackers!<p></h1><center>
 <center>
-  <p><h3>Greetings, Fellow Hackers</h3></p>
-  <h4>
- <p> Thank you for visiting my web page.</p>
-    <p>I am currently updating, Please check back soon to check out my latest softwares.</p>
-    <p>TheoryFreak</p>
-   <h4>
+<p><h3>Greetings, Fellow Hackers</h3></p>
+<h4>
+<p> Thank you for visiting my web page.</p>
+<p>I am currently updating, Please check back soon to check out my latest softwares.</p>
+<p>TheoryFreak</p>
+<h4>
 </center>
