--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <center><h1><p>Welcome, Hackers!<p></h1><center>
+  
+<center><p><img src="https://github.com/theoryfreak/theoryfreak.github.io/blob/main/TheoryFreak1.png?raw=true" alt="TheoryFreak1"></p></center>
+  
 <center>
 <p><h3>Greetings, Fellow Hackers</h3></p>
 <h4>
@@ -7,3 +10,5 @@
 <p>TheoryFreak</p>
 <h4>
 </center>
+  
+  
