--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <center><h1><p>Welcome, Hackers!<p></h1><center>
-  
+  <style>
   <div class="navbar">
   <a href="#home">Home</a>
   <a href="#news">News</a>
@@ -14,7 +14,7 @@
     </div>
   </div>
 </div>
-  
+  </style>
 <center><p><img src="https://github.com/theoryfreak/theoryfreak.github.io/blob/main/TheoryFreak1.png?raw=true" alt="TheoryFreak1"></p></center>
   
 <center>
