--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+ <head>
+  <link rel="stylesheet" href="styles.css">
+</head>
 <center><h1><p>Welcome, Hackers!<p></h1><center>
   <style>
   <div class="navbar">
