--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
  <head>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <center><h1><p>Welcome, Hackers!<p></h1><center>
   <style>
