--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
- <head>
-  <link rel="stylesheet" href="style.css">
+<head>
+<link rel="stylesheet" href="style.css">
+</head>
 <center><h1><p>Welcome, Hackers!<p></h1><center>
-  <style>
   <div class="navbar">
   <a href="#home">Home</a>
   <a href="#news">News</a>
@@ -16,7 +16,6 @@
     </div>
   </div>
 </div>
-  </style>
 <center><p><img src="https://github.com/theoryfreak/theoryfreak.github.io/blob/main/TheoryFreak1.png?raw=true" alt="TheoryFreak1"></p></center>
   
 <center>
