--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
+<!DOCTYPE html>
+<html>
+<title>TheoryFreak</title>
+<body>
+
 <head>
 <link rel="stylesheet" href="style.css">
 </head>
-<center><h1><p>Welcome, Hackers!<p></h1><center>
+  
+<center><h1>Welcome, Hackers!</h1><center>
   <div class="navbar">
   <a href="#home">Home</a>
   <a href="#news">News</a>
@@ -16,15 +22,16 @@
     </div>
   </div>
 </div>
+  
+  
 <center><p><img src="https://github.com/theoryfreak/theoryfreak.github.io/blob/main/TheoryFreak1.png?raw=true" alt="TheoryFreak1"></p></center>
   
 <center>
 <p><h3>Greetings, Fellow Hackers</h3></p>
-<h4>
+  
 <p> Thank you for visiting my web page.</p>
 <p>I am currently updating, Please check back soon to check out my latest softwares.</p>
 <p>TheoryFreak</p>
-<h4>
 </center>
- </head>
-  
+  </body>
+</html>
