--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-<title>TheoryFreak</title>
-<body>
-
 <head>
+<title>TheoryFreak</title>
 <link rel="stylesheet" href="style.css">
 </head>
-  
+
+<body>
 <center><h1>Welcome, Hackers!</h1><center>
   <div class="navbar">
   <a href="#home">Home</a>
@@ -22,16 +21,13 @@
     </div>
   </div>
 </div>
-  
-  
+
 <center><p><img src="https://github.com/theoryfreak/theoryfreak.github.io/blob/main/TheoryFreak1.png?raw=true" alt="TheoryFreak1"></p></center>
-  
+<center><p><h3>Greetings, Fellow Hackers</h3></p></center>
 <center>
-<p><h3>Greetings, Fellow Hackers</h3></p>
-  
-<p> Thank you for visiting my web page.</p>
+<p>Thank you for visiting my web page.</p>
 <p>I am currently updating, Please check back soon to check out my latest softwares.</p>
 <p>TheoryFreak</p>
 </center>
-  </body>
+</body>
 </html>
