--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
 <center><h1>Welcome, Hackers!</h1><center>
   <div class="navbar">
-  <a href="#home">Home</a>
-  <a href="#news">News</a>
+  <a href="https://theoryfreak.github.io/">Home</a>
+  <a href="https://theoryfreak.github.io/downloads">Downloads</a>
+  <a href="https://hack.chat/?programming">Chat</a>
   <div class="dropdown">
     <button class="dropbtn">More
       <i class="fa fa-caret-down"></i>
