--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<center><h1>Welcome, Hackers!</h1><center>
+
   <div class="navbar">
   <a href="https://theoryfreak.github.io/">Home</a>
   <a href="https://theoryfreak.github.io/downloads">Downloads</a>
@@ -23,8 +23,14 @@
   </div>
 </div>
 
-<center><p><img src="https://github.com/theoryfreak/theoryfreak.github.io/blob/main/TheoryFreak1.png?raw=true" alt="TheoryFreak1"></p></center>
+<center><h1>Welcome, Hackers!</h1><center>
 <center><p><h3>Greetings, Fellow Hackers</h3></p></center>
+  <center>
+  <p> I hope you enjoy this website as much as I have enjoyed putting it together for you.</p>
+  <p> Here you can find all of my latest hacking programs, tutorials and more. </p>
+  <p> This website has been designed as a resource for hackers and hackers alike. </p>
+  <p> If you have any questions, comments, or concerns. You may reach me by email at <a href="mailto:pulse@msn.com">pulse@msn.com</a></p>
+  </center>
 <center>
 <p>Thank you for visiting my web page.</p>
 <p>I am currently updating, Please check back soon to check out my latest softwares.</p>
