--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <div class="navbar">
   <a href="https://theoryfreak.github.io/">Home</a>
-  <a href="https://theoryfreak.github.io/downloads">Downloads</a>
+  <a href="https://theoryfreak.github.io/downloads.html">Downloads</a>
   <a href="https://hack.chat/?programming">Chat</a>
   <div class="dropdown">
     <button class="dropbtn">More
