--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
   <div class="navbar">
   <a href="https://theoryfreak.github.io/">Home</a>
   <a href="https://theoryfreak.github.io/downloads.html">Downloads</a>
-  <a href="https://hack.chat/?programming">Chat</a>
+  <a href="https://theoryfreak.github.io/tutorials.html">Tutorials/a>
+  <a href="https://theoryfreak.github.io/marketplace.html">MarketPlace</a>
+  <a href="https://theoryfreak.github.io/chat.html">Chat</a>
   <div class="dropdown">
     <button class="dropbtn">More
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="#">Latest News</a>
+      <a href="#">Resources</a>
+      <a href="#">Helpful Links</a>
+      <a href="#">Word List</a>
+      <a href="#">Contact Me</a>
     </div>
   </div>
 </div>
@@ -28,8 +32,8 @@
   <center>
   <p> I hope you enjoy this website as much as I have enjoyed putting it together for you.</p>
   <p> Here you can find all of my latest hacking programs, tutorials and more. </p>
-  <p> This website has been designed as a resource for hackers and hackers alike. </p>
-  <p> If you have any questions, comments, or concerns. You may reach me by email at <a href="mailto:pulse@msn.com">pulse@msn.com</a></p>
+  <p> This website has been designed to be a useful resource for hackers. </p>
+  <p> If you have any Questions, Comments, or Concerns. You may reach me by Email at <a href="mailto:pulse@msn.com">pulse@msn.com</a></p>
   </center>
 <center>
 <p>Thank you for visiting my web page.</p>
