--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="navbar">
   <a href="https://theoryfreak.github.io/">Home</a>
   <a href="https://theoryfreak.github.io/downloads.html">Downloads</a>
-  <a href="https://theoryfreak.github.io/tutorials.html">Tutorials/a>
+  <a href="https://theoryfreak.github.io/tutorials.html">Tutorials</a>
   <a href="https://theoryfreak.github.io/marketplace.html">MarketPlace</a>
   <a href="https://theoryfreak.github.io/chat.html">Chat</a>
   <div class="dropdown">
