--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </div>
 
 <center><h1>Welcome, Hackers!</h1><center>
-<center><p><h3>Greetings, Fellow Hackers</h3></p></center>
+  <center><p><h3><red>Greetings, Fellow Hackers</red></h3></p></center>
   <center>
   <p> I hope you enjoy this website as much as I have enjoyed putting it together for you.</p>
   <p> Here you can find all of my latest hacking programs, tutorials and more. </p>
@@ -38,7 +38,7 @@
 <center>
 <p>Thank you for visiting my web page.</p>
 <p>I am currently updating, Please check back soon to check out my latest softwares.</p>
-<p>TheoryFreak</p>
+  <p><red>TheoryFreak</red></p>
 </center>
 </body>
 </html>
