--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
     <div class="dropdown-content">
       <a href="#">Latest News</a>
       <a href="#">Resources</a>
-      <a href="#">Helpful Links</a>
-      <a href="#">Word List</a>
+      <a href="#">Useful Links</a>
+      <a href="#">Word Lists</a>
+      <a href="#">Other</a>
       <a href="#">Contact Me</a>
     </div>
   </div>
 </div>
 
 <center><h1>Welcome, Hackers!</h1><center>
-  <center><p><h3><red>Greetings, Fellow Hackers</red></h3></p></center>
+  <center><p style="color:red"><h3>Greetings, Fellow Hackers</h3></p></center>
   <center>
   <p> I hope you enjoy this website as much as I have enjoyed putting it together for you.</p>
   <p> Here you can find all of my latest hacking programs, tutorials and more. </p>
@@ -38,7 +39,7 @@
 <center>
 <p>Thank you for visiting my web page.</p>
 <p>I am currently updating, Please check back soon to check out my latest softwares.</p>
-  <p><red>TheoryFreak</red></p>
+  <p style="color:red">TheoryFreak</p>
 </center>
 </body>
 </html>
