--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a href="https://theoryfreak.github.io/downloads.html">Downloads</a>
   <a href="https://theoryfreak.github.io/tutorials.html">Tutorials</a>
   <a href="https://theoryfreak.github.io/marketplace.html">MarketPlace</a>
-  <a href="https://theoryfreak.github.io/chat.html">Chat</a>
+  <a href="https://theoryfreak.github.io/chat.html">ChatRoom</a>
   <div class="dropdown">
     <button class="dropbtn">More
       <i class="fa fa-caret-down"></i>
