--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 
 <center><h1>Welcome, Hackers!</h1><center>
-  <center><p style="color:red"><h3>Greetings, Fellow Hackers</h3></p></center>
+  <center><p style="color:red">Greetings, Fellow Hackers</p></center>
   <center>
   <p> I hope you enjoy this website as much as I have enjoyed putting it together for you.</p>
   <p> Here you can find all of my latest hacking programs, tutorials and more. </p>
