--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 
 <center><h1>Welcome, Hackers!</h1><center>
-  <center><p style="color:red">Greetings, Fellow Hackers</p></center>
+  <center><h3><p style="color:red">Greetings, Fellow Hackers</p></h3></center>
   <center>
   <p> I hope you enjoy this website as much as I have enjoyed putting it together for you.</p>
   <p> Here you can find all of my latest hacking programs, tutorials and more. </p>
@@ -37,9 +37,9 @@
   <p> If you have any Questions, Comments, or Concerns. You may reach me by Email at <a href="mailto:pulse@msn.com">pulse@msn.com</a></p>
   </center>
 <center>
-<p>Thank you for visiting my web page.</p>
+<p>Thank you for visiting my web page!</p>
 <p>I am currently updating, Please check back soon to check out my latest softwares.</p>
-  <p style="color:red">TheoryFreak</p>
+  <p style="color:red">TheoryFreak 2021</p>
 </center>
 </body>
 </html>
