--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
   <a href="https://theoryfreak.github.io/downloads.html">Downloads</a>
   <a href="https://theoryfreak.github.io/tutorials.html">Tutorials</a>
   <a href="https://theoryfreak.github.io/marketplace.html">MarketPlace</a>
-  <a href="https://theoryfreak.github.io/chat.html">ChatRoom</a>
+  <a href="https://theoryfreak.github.io/chatroom.html">Chatroom</a>
   <div class="dropdown">
     <button class="dropbtn">More
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">Latest News</a>
-      <a href="#">Resources</a>
-      <a href="#">Useful Links</a>
-      <a href="#">Word Lists</a>
-      <a href="#">Other</a>
-      <a href="#">Contact Me</a>
+      <a href="https://theoryfreak.github.io/news.html">Latest News</a>
+      <a href="https://theoryfreak.github.io/resources.html">Resources</a>
+      <a href="https://theoryfreak.github.io/links.html">Useful Links</a>
+      <a href="https://theoryfreak.github.io/lists.html">Word Lists</a>
+      <a href="https://theoryfreak.github.io/other.html">Other</a>
+      <a href="https://theoryfreak.github.io/contact.html">Contact Me</a>
     </div>
   </div>
 </div>
