--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </div>
 </div>
 
-<center><h1>Welcome, Hackers!</h1><center>
+<center><h1>Welcome, Hackers!</h1></center>
   <center><h3><p style="color:red">Greetings, Fellow Hackers</p></h3></center>
   <center>
   <p> I hope you enjoy this website as much as I have enjoyed putting it together for you.</p>
