--- a/chatroom.html
+++ b/chatroom.html
@@ -4,9 +4,8 @@
 <title>TheoryFreak</title>
 <link rel="stylesheet" href="style.css">
 </head>
-
+  
 <body>
-
   <div class="navbar">
   <a href="https://theoryfreak.github.io/">Home</a>
   <a href="https://theoryfreak.github.io/downloads.html">Downloads</a>
@@ -29,70 +28,8 @@
 </div>
 
 <center><h1>Chatroom</h1></center>
-<!DOCTYPE html>
-<html>
-<head>
-<title>TheoryFreak</title>
-<link rel="stylesheet" href="style.css">
-</head>
 
-<body>
-
-  <div class="navbar">
-  <a href="https://theoryfreak.github.io/">Home</a>
-  <a href="https://theoryfreak.github.io/downloads.html">Downloads</a>
-  <a href="https://theoryfreak.github.io/tutorials.html">Tutorials</a>
-  <a href="https://theoryfreak.github.io/marketplace.html">MarketPlace</a>
-  <a href="https://theoryfreak.github.io/chatroom.html">Chatroom</a>
-  <div class="dropdown">
-    <button class="dropbtn">More
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="https://theoryfreak.github.io/news.html">Latest News</a>
-      <a href="https://theoryfreak.github.io/resources.html">Resources</a>
-      <a href="https://theoryfreak.github.io/links.html">Useful Links</a>
-      <a href="https://theoryfreak.github.io/lists.html">Word Lists</a>
-      <a href="https://theoryfreak.github.io/other.html">Other</a>
-      <a href="https://theoryfreak.github.io/contact.html">Contact Me</a>
-    </div>
-  </div>
-</div>
-
-<center><h1>Downloads</h1></center>
-<!DOCTYPE html>
-<html>
-<head>
-<title>TheoryFreak</title>
-<link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-
-  <div class="navbar">
-  <a href="https://theoryfreak.github.io/">Home</a>
-  <a href="https://theoryfreak.github.io/downloads.html">Downloads</a>
-  <a href="https://theoryfreak.github.io/tutorials.html">Tutorials</a>
-  <a href="https://theoryfreak.github.io/marketplace.html">MarketPlace</a>
-  <a href="https://theoryfreak.github.io/chatroom.html">Chatroom</a>
-  <div class="dropdown">
-    <button class="dropbtn">More
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="https://theoryfreak.github.io/news.html">Latest News</a>
-      <a href="https://theoryfreak.github.io/resources.html">Resources</a>
-      <a href="https://theoryfreak.github.io/links.html">Useful Links</a>
-      <a href="https://theoryfreak.github.io/lists.html">Word Lists</a>
-      <a href="https://theoryfreak.github.io/other.html">Other</a>
-      <a href="https://theoryfreak.github.io/contact.html">Contact Me</a>
-    </div>
-  </div>
-</div>
-
-<center><h1>Downloads</h1></center>
-
-<iframe src="https://hack.chat/programming?" width="100%" height="300" style="border:none;"></iframe>
+<iframe src="https://hack.chat/?programming" width="100%" height="300" style="border:none;"></iframe>
 
 </center>
 </body>
