--- a/chatroom.html
+++ b/chatroom.html
@@ -29,7 +29,7 @@
 
 <center><h1>Chatroom</h1></center>
 
-<iframe src="https://hack.chat/?programming" width="100%" style="border:none;"></iframe>
+<iframe src="https://hack.chat/?programming" width="100%" height="400" style="border:none;"></iframe>
 
 </center>
 </body>
