--- a/chatroom.html
+++ b/chatroom.html
@@ -8,21 +8,21 @@
 
   <div class="navbar">
   <a href="https://theoryfreak.github.io/">Home</a>
-  <a href="https://theoryfreak.github.io/downloads.html">Downloads</a>
-  <a href="https://theoryfreak.github.io/tutorials.html">Tutorials</a>
-  <a href="https://theoryfreak.github.io/marketplace.html">MarketPlace</a>
-  <a href="https://theoryfreak.github.io/chatroom.html">Chatroom</a>
+  <a href="/downloads.html">Downloads</a>
+  <a href="/tutorials.html">Tutorials</a>
+  <a href="/marketplace.html">MarketPlace</a>
+  <a href="/chatroom.html">Chatroom</a>
   <div class="dropdown">
     <button class="dropbtn">More
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="https://theoryfreak.github.io/news.html">Latest News</a>
-      <a href="https://theoryfreak.github.io/resources.html">Resources</a>
-      <a href="https://theoryfreak.github.io/links.html">Useful Links</a>
-      <a href="https://theoryfreak.github.io/lists.html">Word Lists</a>
-      <a href="https://theoryfreak.github.io/other.html">Other</a>
-      <a href="https://theoryfreak.github.io/contact.html">Contact Me</a>
+      <a href="/news.html">Latest News</a>
+      <a href="/resources.html">Resources</a>
+      <a href="/links.html">Useful Links</a>
+      <a href="/lists.html">Word Lists</a>
+      <a href="/other.html">Other</a>
+      <a href="/contact.html">Contact Me</a>
     </div>
   </div>
 </div>
