--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
   <p><h3>Google Auto Suggestions Bot - By TheoryFreak 2021</h3></p>
   <p><img src="https://i.imgur.com/UIfujyL.jpg" alt="Google Bot" width="560" height="315"></p>
 <p><iframe width="560" height="315" src="https://www.youtube.com/embed/JWyVDQxFdpg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+ https://github.com/theoryfreak/theoryfreak.github.io/blob/main/Google%20Bot%20-%20Free%20Version.zip?raw=true
+  <a href="https://github.com/theoryfreak/theoryfreak.github.io/blob/main/Google%20Bot%20-%20Free%20Version.zip?raw=true"><h4>DIRECT DOWNLOAD</h4></a>
   <p style="color:red">TheoryFreak 2021</p>
 </center>
 </body>
