--- a/resources.html
+++ b/resources.html
@@ -28,7 +28,7 @@
 </div>
 
 <center><h1>Resources</h1></center>
-
+  <p><a href="https://raw.githubusercontent.com/theoryfreak/theoryfreak.github.io/main/Biggest%20Google%20Dorks%20List%20-%20Inurl.txt">Biggest List Of Google Dorks 2021 - INURL</a></p>
 </center>
 </body>
 </html>
