--- a/chatroom.html
+++ b/chatroom.html
@@ -9,22 +9,10 @@
   <div class="navbar">
   <a href="https://theoryfreak.github.io/">Home</a>
   <a href="/downloads.html">Downloads</a>
-  <a href="/tutorials.html">Tutorials</a>
   <a href="/marketplace.html">MarketPlace</a>
   <a href="/chatroom.html">Chatroom</a>
-  <div class="dropdown">
-    <button class="dropbtn">More
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="/news.html">Latest News</a>
-      <a href="/resources.html">Resources</a>
-      <a href="/links.html">Useful Links</a>
-      <a href="/lists.html">Word Lists</a>
-      <a href="/other.html">Other</a>
-      <a href="/contact.html">Contact Me</a>
-    </div>
-  </div>
+  <a href="/other.html">More</a>
+   
 </div>
 
 <center><h1>Chatroom</h1></center>
