--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
    
 </div>
 
-<center><h1>Welcome, Hackers!</h1></center>
+<center><h1>Welcome, You!</h1></center>
   <center><h3><p style="color:red">Greetings, Fellow Hackers</p></h3></center>
   <center>
   <p> I hope you enjoy this website as much as I have enjoyed putting it together for you.</p>
-  <p> Here you can find all of my latest hacking programs, tutorials and more. </p>
-  <p> This website has been designed to be a useful resource for hackers. </p>
-  <p> If you have any Questions, Comments, or Concerns. You may reach me by Email at <a href="mailto:pulse@msn.com">pulse@msn.com</a></p>
+  <p> Here you may find all the lastest hacking software, Tutorials and much more. This website and the contents herein are for educational purposes only! I do NOT hold any responsiblity for what you may do with any software and/or information you download and/or obtain from this website *.theoryfreak.com . I expect you to use anything you may obtain from this website ethically. Happy Hacking! - TheoryFreak </p>
   </center>
 <center>
 <p>Thank you for visiting my web page!</p>
