--- a/other.html
+++ b/other.html
@@ -15,7 +15,7 @@
    
 </div>
 
-<center><h1>Links & Other Resources</h1></center>
+<center><h1>Other Resources</h1></center>
   
 <p><a href="https://raw.githubusercontent.com/theoryfreak/TXT/main/Google%20Dorks%202021">Google Dorks 2021 - Huge List!</a></p>
 
