--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <p><img src="https://i.imgur.com/UIfujyL.jpg" alt="Google Bot" width="560" height="315"></p>
   <p><a href="https://www.youtube.com/watch?v=JWyVDQxFdpg"><h4>Watch Video</h4></a></p>
   <p><a href="https://github.com/theoryfreak/Downloads/blob/main/Google%20Bot%20-%20Free%20Version.zip?raw=true"><h4>DIRECT DOWNLOAD</h4></a></p>
+  <p>Supported OS Include: Windows XP / Windows 7 / Windows 10</p>
   <p style="color:red">TheoryFreak 2021</p>
 </center>
 </body>
