--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <center>
 <p>Thank you for visiting my web page!</p>
   <p><h2>You May Be Interested In Some Of My Featured Programs Below...</h2></p>
-  <p><h3>Google Auto Suggestions Bot - By TheoryFreak 2021</h3></p>
+  <p style="color:green"><h3>Google Auto Suggestions Bot - By TheoryFreak 2021</h3></p>
   <p><img src="https://i.imgur.com/UIfujyL.jpg" alt="Google Bot" width="560" height="315"></p>
   <p><a href="https://www.youtube.com/watch?v=JWyVDQxFdpg"><h4>Watch Video</h4></a></p>
     <p>Supported OS Include: Windows XP / Windows 7 / Windows 10</p>
