--- a/chatroom.html
+++ b/chatroom.html
@@ -8,7 +8,7 @@
 
 <center><h1>Hackers Chatroom</h1></center>
   <p>Chat With Hackers Online Now, No Registration Required 100% FREE!</p>
-  <iframe src="https://hack.chat/?programming" frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe>
+  <iframe src="https://hack.chat/?programming" frameborder="0" height:100%; width:100%" height="100%" width="100%"></iframe>
 
 </center>
 </body>
