--- a/chatroom.html
+++ b/chatroom.html
@@ -2,14 +2,9 @@
 <html>
 <head>
 <title>TheoryFreak</title>
-<link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<center><h1>Hackers Chatroom</h1></center>
-  <center>
-  <p>Chat With Hackers Online Now, No Registration Required 100% FREE!</p>
-  <iframe src="https://hack.chat/?freak" frameborder="0"  height="400" width="600"></iframe>
-  </center>
+  <center><p>Chat With Hackers Online Now, No Registration Required 100% FREE!</p></center>
+  <center><iframe src="https://hack.chat/?freak" frameborder="0"  height="400" width="600"></iframe></center>
 </body>
 </html>
