--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
 <title>TheoryFreak</title>
 <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 <center><h1>Welcome, You!</h1></center>
-<p style="color:red"><h3>Greetings, Fellow Hackers</h3></p>
-
-    
-<p> I hope you enjoy this website as much as I have enjoyed putting it together for you.</p>
-    
-<button type="button" onclick="loadXMLDoc()">Chat With Hackers</button>
-
+<center><p style="color:red"><h3>Greetings, Fellow Hackers!</h3></p></center>
+<center><p>I hope you enjoy this website as much as I have enjoyed putting it together for you.</p></center>
+<center><button type="button" onclick="loadXMLDoc()">Chat With Hackers</button></center>
 <center><div id="theoryfreak"></div></center>
-  
+
 <script>
 function loadXMLDoc() {
   var xhttp = new XMLHttpRequest();
@@ -29,8 +26,7 @@ function loadXMLDoc() {
   xhttp.send();
 }
 </script>
-  
-<p style="color:red">TheoryFreak 2021</p>
 
+<p style="color:red">TheoryFreak 2021</p>
 </body>
 </html>
