--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 
 <body>
-<center><h1>Welcome, You!</h1></center>
-<p style="color:red"><h3>Greetings, Fellow Hackers!</h3></p>
-<center><p>I hope you enjoy this website as much as I have enjoyed putting it together for you.</p></center>
-<center><button type="button" onclick="loadXMLDoc()">Chat With Hackers</button></center>
-<center><div id="theoryfreak"></div></center>
+<h1>Greetings, Fellow Hackers!</h1>
+<p>I hope you enjoy!</p>
+<button type="button" onclick="loadXMLDoc()">Chat With Hackers</button></center>
+  
+<div id="theoryfreak"></div>
 
 <script>
 function loadXMLDoc() {
@@ -27,6 +27,6 @@ function loadXMLDoc() {
 }
 </script>
 
-  <p style="color:red"><center>TheoryFreak 2021</center></p>
+ <p style="color:red">TheoryFreak 2021</p>
 </body>
 </html>
