--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Greetings, Fellow Hackers!</h1>
 <p>I hope you enjoy!</p>
-<button type="button" onclick="loadXMLDoc()">Chat With Hackers</button></center>
+<button type="button" onclick="loadXMLDoc()">Chat With Hackers</button>
   
 <div id="theoryfreak"></div>
 
