--- a/chatroom.html
+++ b/chatroom.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>TheoryFreak</title>
+<title>TheoryFreak - Hack Chat</title>
 </head>
 <body>
-  <center><p>Chat With Hackers Online Now, No Registration Required 100% FREE!</p></center>
-  <center><iframe src="https://hack.chat/?freak" frameborder="0"  height="400" width="600"></iframe></center>
+<iframe src="https://hack.chat/?freak" frameborder="0"  height="400" width="600"></iframe>
 </body>
 </html>
