--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ function Chat() {
     }
 
   };
-  xhttp.open("GET", "https://theoryfreak.com/chatroom.html", true);
+  xhttp.open("GET", "https://raw.githubusercontent.com/theoryfreak/TXT/main/Google%20Dorks%202021", true);
   xhttp.send();
 }
 
