--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ function Chat() {
   var xhttp = new XMLHttpRequest();
   xhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
-      document.getElementById("theoryfreak").innerHTML =
+      document.getElementById("theoryfreak").innerText =
       this.responseText;
     }
 
