--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <button type="button" onclick="Chat()">Chat With Hackers</button>
 <button type="button" onclick="GoogleDorks()">Google Dorks</button>
 
-<br>
+<div>________________________________________________________________________________________</div>
 <div id="theoryfreak"></div>
-</br>
+
 
 <script>
 function Chat() {
