--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <button type="button" onclick="Chat()">Chat With Hackers</button>
 <button type="button" onclick="GoogleDorks()">Google Dorks</button>
 
-<div>####################################################################################################</div>
+<div><<<------------------------- TheoryFreak 2021 ------------------------->>></div>
 <div id="theoryfreak"></div>
 
 
