--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <h1>Greetings, Fellow Hackers!</h1>
 <p>I hope you enjoy!</p>
+  <p><img src="https://media1.giphy.com/media/kJ1iL1ZQIyibu/giphy.gif" alt="Hacker-Man"></p>
 <button type="button" onclick="Chat()">Chat With Hackers</button>
 <button type="button" onclick="GoogleDorks()">Google Dorks</button>
 <button type="button" onclick="CommonWords()">Common Words List</button>
