--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
   
   <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v9.0" nonce="VLwNcPGa"></script>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v9.0" nonce="ICsJ2HGn"></script>
   
 <h1>Greetings, Fellow Hackers!</h1>
 <p>I hope you enjoy!</p>
   
-  <div class="fb-page" data-href="https://www.facebook.com/TheoryFreak" data-tabs="timeline" data-width="" data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/TheoryFreak" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/TheoryFreak">TheoryFreak.com</a></blockquote></div>
-  
+ <div class="fb-page" data-href="https://www.facebook.com/TheoryFreak" data-tabs="timeline,messages,events" data-width="" data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/TheoryFreak" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/TheoryFreak">TheoryFreak.com</a></blockquote></div>
 
 <button type="button" onclick="Chat()">Chat With Hackers</button>
 <button type="button" onclick="GoogleDorks()">Google Dorks</button>
