--- a/index.html
+++ b/index.html
@@ -14,7 +14,87 @@
 <h1>Greetings, Fellow Hackers!</h1>
 <p>I hope you enjoy!</p>
   
- <div class="fb-page" data-href="https://www.facebook.com/TheoryFreak" data-tabs="timeline,messages,events" data-width="" data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/TheoryFreak" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/TheoryFreak">TheoryFreak.com</a></blockquote></div>
+🕌 Home
+
+🕳 Black Holes
+
+💽 Downloads
+
+📌 Pinned Post!
+
+☎️ Call Me!
+
+🛠 General Tutorials
+
+🎞 Video Tutorials
+
+📖 Pdf Tutorials
+
+📏 Statistics
+
+💲 MarketPlace
+
+🛒 MarketPlace
+
+🎁 Free Offers!
+
+☠️ Scammers!
+
+🤯 Most Epic!
+
+📄 Word Lists
+
+🎥 Videos
+
+📷 Photos
+
+🎶 Music
+
+📈 Forex Market
+
+✉️ Email Me
+
+🗯 Thought Of The Day!
+
+🚀 Science
+
+🎭 Psychology
+
+💪🏽 Body Building
+
+🙏🏾 Religion
+
+✈️ 9/11 Theory
+
+🙋 Ask a Question
+
+💥 Explosive Science
+
+♻️ Recycling
+
+💉 Drugs
+
+💊 Pills
+
+🍄 psychodelics
+
+⚰️ Obituary
+
+🎲 Gambling
+
+⌚️ Space Time
+
+👽 Extraterritorial
+
+😱 Funny Memes
+
+🚫 Rules!
+
+📐 Math
+
+💎 Diamonds
+
+💕 Romance
 
 <button type="button" onclick="Chat()">Chat With Hackers</button>
 <button type="button" onclick="GoogleDorks()">Google Dorks</button>
