--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <h1>Greetings, Fellow Hackers!</h1>
 <p>I hope you enjoy!</p>
   
-🕌 Home
+  <button type="button" onclick="Chat()">🕌 Home</button>
 
-🕳 Black Holes
+  <button type="button" onclick="Chat()">🕳 Black Holes</button>
 
 💽 Downloads
 
