--- a/index.html
+++ b/index.html
@@ -14,87 +14,87 @@
 <h1>Greetings, Fellow Hackers!</h1>
 <p>I hope you enjoy!</p>
   
-  <button type="button" onclick="Chat()">🕌 Home</button>
+  <button type="button" onclick="">🕌 Home</button>
 
-  <button type="button" onclick="Chat()">🕳 Black Holes</button>
+<button type="button" onclick="">🕳 Black Holes</button>
 
-💽 Downloads
+<button type="button" onclick="">💽 Downloads</button>
 
-📌 Pinned Post!
+<button type="button" onclick="">📌 Pinned Post!</button>
 
-☎️ Call Me!
+<button type="button" onclick="">☎️ Call Me!</button>
 
-🛠 General Tutorials
+<button type="button" onclick="">🛠 General Tutorials</button>
 
-🎞 Video Tutorials
+<button type="button" onclick="">🎞 Video Tutorials</button>
 
-📖 Pdf Tutorials
+<button type="button" onclick="">📖 Pdf Tutorials</button>
 
-📏 Statistics
+<button type="button" onclick="">📏 Statistics</button>
 
-💲 MarketPlace
+<button type="button" onclick="">💲 MarketPlace</button>
 
-🛒 MarketPlace
+<button type="button" onclick="">🛒 MarketPlace</button>
 
-🎁 Free Offers!
+<button type="button" onclick="">🎁 Free Offers!</button>
 
-☠️ Scammers!
+<button type="button" onclick="">☠️ Scammers!</button>
 
-🤯 Most Epic!
+<button type="button" onclick="">🤯 Most Epic!</button>
 
-📄 Word Lists
+<button type="button" onclick="">📄 Word Lists</button>
 
-🎥 Videos
+<button type="button" onclick="">🎥 Videos</button>
 
-📷 Photos
+<button type="button" onclick="">📷 Photos</button>
 
-🎶 Music
+<button type="button" onclick="">🎶 Music</button>
 
-📈 Forex Market
+<button type="button" onclick="">📈 Forex Market</button>
 
-✉️ Email Me
+<button type="button" onclick="">✉️ Email Me</button>
 
-🗯 Thought Of The Day!
+<button type="button" onclick="">🗯 Thought Of The Day!</button>
 
-🚀 Science
+<button type="button" onclick="">🚀 Science</button>
 
-🎭 Psychology
+<button type="button" onclick="">🎭 Psychology</button>
 
-💪🏽 Body Building
+<button type="button" onclick="">💪🏽 Body Building</button>
 
-🙏🏾 Religion
+<button type="button" onclick="">🙏🏾 Religion</button>
 
-✈️ 9/11 Theory
+<button type="button" onclick="">✈️ 9/11 Theory</button>
 
-🙋 Ask a Question
+<button type="button" onclick="">🙋 Ask a Question</button>
 
-💥 Explosive Science
+<button type="button" onclick="">💥 Explosive Science</button>
 
-♻️ Recycling
+<button type="button" onclick="">♻️ Recycling</button>
 
-💉 Drugs
+<button type="button" onclick="">💉 Drugs</button>
 
-💊 Pills
+<button type="button" onclick="">💊 Pills</button>
 
-🍄 psychodelics
+<button type="button" onclick="">🍄 psychodelics</button>
 
-⚰️ Obituary
+<button type="button" onclick="">⚰️ Obituary</button>
 
-🎲 Gambling
+<button type="button" onclick="">🎲 Gambling</button>
 
-⌚️ Space Time
+<button type="button" onclick="">⌚️ Space Time</button>
 
-👽 Extraterritorial
+<button type="button" onclick="">👽 Extraterritorial</button>
 
-😱 Funny Memes
+<button type="button" onclick="">😱 Funny Memes</button>
 
-🚫 Rules!
+<button type="button" onclick="">🚫 Rules!</button>
 
-📐 Math
+<button type="button" onclick="">📐 Math</button>
 
-💎 Diamonds
+<button type="button" onclick="">💎 Diamonds</button>
 
-💕 Romance
+  <button type="button" onclick="">💕 Romance</button>
 
 <button type="button" onclick="Chat()">Chat With Hackers</button>
 <button type="button" onclick="GoogleDorks()">Google Dorks</button>
