--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v9.0" nonce="ICsJ2HGn"></script>
   
-<h1>Greetings, Fellow Hackers!</h1>
+<h1>Welcome, Hackers!</h1>
 
 <button type="button" onclick="">🕌 Home</button>
 
