--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 
 <body>
   
-  <div id="fb-root"></div>
 <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v9.0" nonce="ICsJ2HGn"></script>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v9.0" nonce="Eqh7Y9AL"></script>
+  
+  <div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#configurator" data-width="" data-numposts="5"></div>
+  
   
 <h1>Welcome, Hackers!</h1>
 
