--- a/index.html
+++ b/index.html
@@ -16,86 +16,74 @@
 <h1>Welcome, Hackers!</h1>
 
 <button type="button" onclick="">🕌 Home</button>
-
-<button type="button" onclick="">🕳 Black Holes</button>
-
+  
+<button type="button" onclick="">💥 Chat</button>
+  
 <button type="button" onclick="">💽 Downloads</button>
+  
+<button type="button" onclick="">💲 MarketPlace</button>
+  
+<button type="button" onclick="">☠️ Scammers!</button>
+
+<button type="button" onclick="">🎁 Freebies & More!</button>
 
 <button type="button" onclick="">📌 Pinned Post!</button>
-
-<button type="button" onclick="">☎️ Call Me!</button>
-
+  
 <button type="button" onclick="">🛠 General Tutorials</button>
-
+  
 <button type="button" onclick="">🎞 Video Tutorials</button>
 
 <button type="button" onclick="">📖 Pdf Tutorials</button>
-
-<button type="button" onclick="">📏 Statistics</button>
-
-<button type="button" onclick="">💲 MarketPlace</button>
-
-<button type="button" onclick="">🛒 MarketPlace</button>
-
-<button type="button" onclick="">🎁 Free Offers!</button>
-
-<button type="button" onclick="">☠️ Scammers!</button>
-
-<button type="button" onclick="">🤯 Most Epic!</button>
-
+  
 <button type="button" onclick="">📄 Word Lists</button>
-
+  
 <button type="button" onclick="">🎥 Videos</button>
+  
+<button type="button" onclick="">🎶 Music</button>
 
 <button type="button" onclick="">📷 Photos</button>
-
-<button type="button" onclick="">🎶 Music</button>
+  
+<button type="button" onclick="">😱 Funny Memes</button>
+  
+<button type="button" onclick="">🙋 Ask/Answer Questions!</button>
 
 <button type="button" onclick="">📈 Forex Market</button>
 
-<button type="button" onclick="">✉️ Email Me</button>
-
-<button type="button" onclick="">🗯 Thought Of The Day!</button>
-
-<button type="button" onclick="">🚀 Science</button>
+<button type="button" onclick="">🔬 Science</button>
+  
+<button type="button" onclick="">🤯 Most Epic!</button>
+  
+<button type="button" onclick="">📐 Math</button>
+  
+<button type="button" onclick="">📏 Statistics</button>
+  
+<button type="button" onclick="">⌚️ Space Time</button>
+  
+<button type="button" onclick="">👽 Extraterritorial</button>
 
 <button type="button" onclick="">🎭 Psychology</button>
 
 <button type="button" onclick="">💪🏽 Body Building</button>
 
-<button type="button" onclick="">🙏🏾 Religion</button>
+<button type="button" onclick="">💕 Romance</button>
+  
+<button type="button" onclick="">♻️ Recycling</button>
 
 <button type="button" onclick="">✈️ 9/11 Theory</button>
-
-<button type="button" onclick="">🙋 Ask a Question</button>
-
-<button type="button" onclick="">💥 Explosive Science</button>
-
-<button type="button" onclick="">♻️ Recycling</button>
 
 <button type="button" onclick="">💉 Drugs</button>
 
 <button type="button" onclick="">💊 Pills</button>
 
 <button type="button" onclick="">🍄 psychodelics</button>
+  
+<button type="button" onclick="">🎲 Gambling</button>
+  
+<button type="button" onclick="">🙏🏾 Religion</button>
 
 <button type="button" onclick="">⚰️ Obituary</button>
-
-<button type="button" onclick="">🎲 Gambling</button>
-
-<button type="button" onclick="">⌚️ Space Time</button>
-
-<button type="button" onclick="">👽 Extraterritorial</button>
-
-<button type="button" onclick="">😱 Funny Memes</button>
-
-<button type="button" onclick="">🚫 Rules!</button>
-
-<button type="button" onclick="">📐 Math</button>
-
-<button type="button" onclick="">💎 Diamonds</button>
-
-<button type="button" onclick="">💕 Romance</button>
+  
+<button type="button" onclick="">✉️ Email Me</button>
 
 <button type="button" onclick="Chat()">Chat With Hackers</button>
 <button type="button" onclick="GoogleDorks()">Google Dorks</button>
