--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
 
 <body>
   
-<div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v9.0" nonce="Eqh7Y9AL"></script>
-  
-  <div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#configurator" data-width="" data-numposts="5"></div>
-  
-  
 <h1>Welcome, Hackers!</h1>
-
+ 
+ IMPORTANT! - You Must Be An Adult 18+ To Use This Website. If You Are NOT An Adult 18+ Please Exit This Website Immediately!
+  
+  
+  <p><h4>This Website Is Strictly For Educatinal Purposes Only. 
+  By Engaging This Website, You Agree, That You Hold Full Responsiblity For What You May Do With The Information Or Software You May Obtain From This Website.
+  You Agree, That You Are, Soley Responsible For Protecting Yourself From Software That May Harm Your Computer. 
+  You Agree, That I, The Site Owner Of https://theoryfreak.com/ Am NOT Responsible For Any Harm Or Adverse Events you May Experence Using This Website Or Any Software You May Obtain By Using This Website.
+  I Do NOT Own, Endorse, Nor Guarntee In Any Way, Any Product, Service, Tutorial, Or Material, That You May Find By Using This Website, Unless Otherwise Stated. </h4></p>
+  
+  
+  
+  
+ 
 <button type="button" onclick="">🕌 Home</button>
   
 <button type="button" onclick="">💥 Chat</button>
