--- a/index.html
+++ b/index.html
@@ -9,17 +9,24 @@
   
 <h1>Welcome, Hackers!</h1>
  
- IMPORTANT! - You Must Be An Adult 18+ To Use This Website. If You Are NOT An Adult 18+ Please Exit This Website Immediately!
+ <p style="color:red">IMPORTANT! - You Must Be An Adult 18+ To Use This Website. If You Are NOT An Adult 18+ Please Exit This Website Immediately!</p>
   
   
-  <p><h4>This Website Is Strictly For Educatinal Purposes Only. 
+  <p style="color:red"><h4>This Website Is Strictly For Educatinal Purposes Only. 
   By Engaging This Website, You Agree, That You Hold Full Responsiblity For What You May Do With The Information Or Software You May Obtain From This Website.
   You Agree, That You Are, Soley Responsible For Protecting Yourself From Software That May Harm Your Computer. 
   You Agree, That I, The Site Owner Of https://theoryfreak.com/ Am NOT Responsible For Any Harm Or Adverse Events you May Experence Using This Website Or Any Software You May Obtain By Using This Website.
   I Do NOT Own, Endorse, Nor Guarntee In Any Way, Any Product, Service, Tutorial, Or Material, That You May Find By Using This Website, Unless Otherwise Stated. </h4></p>
   
   
-  
+  <p style="color:blue">I am currently making updates to the website. Most of the website will not function as I am making these updates. 
+    Please bookmark this website and visit back soon.
+    I will be hosting some of my own programs that until recently would have needed a subscription. My programs will only be available to download from https://TheoryFreak.com.
+    If you discover any of my programs hosted else where, Please be advised to use extreme cation and not trust outside sources as they may contain malware. 
+    I will be hosting some great hacking tools, tutorials, including video & pdf tutorials. I will be hosting word tools and word list. There will be a chat room for hackers to communicate there knowledge.
+    Please, always be mindful of other members. Always treat one another like you would want to be treated. I created this website to serve as a safe haven for the hacker community.
+    This website shall serve as an online portal Of valuable information that shall be open to all hackers and hackers alike. I will try my best to implement a way to share content between one another.
+    If anyone, has any questions, comments, or concerns, please don't hesitate to email me at theoryfreak@yahoo.com My facebook page is https://facebook.com/TheoryFreak</p>
   
  
 <button type="button" onclick="">🕌 Home</button>
