--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
  <p style="color:red">IMPORTANT! - You Must Be An Adult 18+ To Use This Website. If You Are NOT An Adult 18+ Please Exit This Website Immediately!</p>
   
   
-  <p style="color:red"><h4>This Website Is Strictly For Educatinal Purposes Only. 
-  By Engaging This Website, You Agree, That You Hold Full Responsiblity For What You May Do With The Information Or Software You May Obtain From This Website.
+  <p style="color:red"><h4>This Website Is Strictly For Educatinal Purposes Only. </h4> </p>
+  <p style="color:red">By Engaging This Website, You Agree, That You Hold Full Responsiblity For What You May Do With The Information Or Software You May Obtain From This Website.
   You Agree, That You Are, Soley Responsible For Protecting Yourself From Software That May Harm Your Computer. 
   You Agree, That I, The Site Owner Of https://theoryfreak.com/ Am NOT Responsible For Any Harm Or Adverse Events you May Experence Using This Website Or Any Software You May Obtain By Using This Website.
-  I Do NOT Own, Endorse, Nor Guarntee In Any Way, Any Product, Service, Tutorial, Or Material, That You May Find By Using This Website, Unless Otherwise Stated. </h4></p>
+  I Do NOT Own, Endorse, Nor Guarntee In Any Way, Any Product, Service, Tutorial, Or Material, That You May Find By Using This Website, Unless Otherwise Stated. </p>
   
   
   <p style="color:blue">I am currently making updates to the website. Most of the website will not function as I am making these updates. 
@@ -29,71 +29,71 @@
     If anyone, has any questions, comments, or concerns, please don't hesitate to email me at theoryfreak@yahoo.com My facebook page is https://facebook.com/TheoryFreak</p>
   
  
-<button type="button" onclick="">🕌 Home</button>
+<button type="button" onclick=""> Home </button>
   
-<button type="button" onclick="">💥 Chat</button>
+<button type="button" onclick=""> Chat </button>
   
-<button type="button" onclick="">💽 Downloads</button>
+<button type="button" onclick=""> Downloads </button>
   
-<button type="button" onclick="">💲 MarketPlace</button>
+<button type="button" onclick=""> MarketPlace </button>
   
-<button type="button" onclick="">☠️ Scammers!</button>
+<button type="button" onclick=""> Scammers! </button>
 
-<button type="button" onclick="">🎁 Freebies & More!</button>
+<button type="button" onclick=""> Freebies & More! </button>
 
-<button type="button" onclick="">📌 Pinned Post!</button>
+<button type="button" onclick=""> Pinned Post! </button>
   
-<button type="button" onclick="">🛠 General Tutorials</button>
+<button type="button" onclick=""> General Tutorials </button>
   
-<button type="button" onclick="">🎞 Video Tutorials</button>
+<button type="button" onclick=""> Video Tutorials </button>
 
-<button type="button" onclick="">📖 Pdf Tutorials</button>
+<button type="button" onclick=""> Pdf Tutorials </button>
   
-<button type="button" onclick="">📄 Word Lists</button>
+<button type="button" onclick=""> Word Lists </button>
   
-<button type="button" onclick="">🎥 Videos</button>
+<button type="button" onclick=""> Videos </button>
   
-<button type="button" onclick="">🎶 Music</button>
+<button type="button" onclick=""> Music </button>
 
-<button type="button" onclick="">📷 Photos</button>
+<button type="button" onclick=""> Photos </button>
   
-<button type="button" onclick="">😱 Funny Memes</button>
+<button type="button" onclick=""> Funny Memes </button>
   
-<button type="button" onclick="">🙋 Ask/Answer Questions!</button>
+<button type="button" onclick=""> Ask/Answer Questions! </button>
 
-<button type="button" onclick="">📈 Forex Market</button>
+<button type="button" onclick=""> Forex Market </button>
 
-<button type="button" onclick="">🔬 Science</button>
+<button type="button" onclick=""> Science </button>
   
-<button type="button" onclick="">🤯 Most Epic!</button>
+<button type="button" onclick=""> Most Epic! </button>
   
-<button type="button" onclick="">📐 Math</button>
+<button type="button" onclick=""> Math </button>
   
-<button type="button" onclick="">📏 Statistics</button>
+<button type="button" onclick=""> Statistics </button>
   
-<button type="button" onclick="">⌚️ Space Time</button>
+<button type="button" onclick=""> Space Time </button>
   
-<button type="button" onclick="">👽 Extraterritorial</button>
+<button type="button" onclick=""> Extraterritorial </button>
 
-<button type="button" onclick="">🎭 Psychology</button>
+<button type="button" onclick=""> Psychology </button>
 
-<button type="button" onclick="">💪🏽 Body Building</button>
+<button type="button" onclick=""> Body Building </button>
 
-<button type="button" onclick="">💕 Romance</button>
+<button type="button" onclick=""> Romance </button>
   
-<button type="button" onclick="">♻️ Recycling</button>
+<button type="button" onclick=""> Recycling </button>
 
-<button type="button" onclick="">✈️ 9/11 Theory</button>
+<button type="button" onclick=""> 9/11 Theory </button>
 
-<button type="button" onclick="">💉 Drugs</button>
+<button type="button" onclick=""> Drugs </button>
 
-<button type="button" onclick="">💊 Pills</button>
+<button type="button" onclick=""> Pills </button>
 
-<button type="button" onclick="">🍄 psychodelics</button>
+<button type="button" onclick=""> psychodelics </button>
   
-<button type="button" onclick="">🎲 Gambling</button>
+<button type="button" onclick=""> Gambling </button>
   
-<button type="button" onclick="">🙏🏾 Religion</button>
+<button type="button" onclick=""> Religion </button>
 
 <button type="button" onclick="">⚰️ Obituary</button>
   
